# ipc-adapter

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  appveyor.yml  cpp.hint
00_Documentation/: CMakeLists.txt  Coding_Rules.md  Design_Decisions.md  Development_Process.md  Naming_Conventions.md  Usage.md
20_Sources/: CMakeLists.txt  MRS.md  README.md
20_Sources/CMake/: 01_git_Integration.cmake  05_CPack_Support.cmake  06_CTest_Support.cmake  21_FindQt.cmake  50_CompilerSwitches.cmake  51_CompilerSwitches_GCC.cmake  52_CompilerSwitches_Clang.cmake  53_CompilerSwitches_MSVC.cmake  ProjectSettings.cmake
20_Sources/IpcAdapter/Application/: CMakeLists.txt
20_Sources/IpcAdapter/Application/src/: IpcAdapterApplication.cpp
20_Sources/IpcAdapter/Components/: CMakeLists.txt
20_Sources/IpcAdapter/Components/AmqpComponents/: CMakeLists.txt
20_Sources/IpcAdapter/Components/AmqpComponents/doc/: AmqpComponents_MRS.md
20_Sources/IpcAdapter/Components/AmqpComponents/src/: AmqpConfigurable.cpp  AmqpConfigurable.h  AmqpConfiguration.cpp  AmqpConfiguration.h  AmqpExchangeSink.cpp  AmqpExchangeSink.h
20_Sources/IpcAdapter/Components/AmqpComponents/tst/: AmqpConfigurableTest.cpp  AmqpConfigurableTest.h  AmqpExchangeSinkTest.cpp  AmqpExchangeSinkTest.h  QAmqpSpyObjects.h  TestMain.cpp
20_Sources/IpcAdapter/Components/Converters/: CMakeLists.txt
20_Sources/IpcAdapter/Components/Converters/doc/: Converters_MRS.md
20_Sources/IpcAdapter/Components/Converters/src/: ReverseBytesConverter.cpp  ReverseBytesConverter.h  XmlToMetaDataConverter.cpp  XmlToMetaDataConverter.h
20_Sources/IpcAdapter/Components/Converters/tst/: ReverseBytesConverterTest.cpp  ReverseBytesConverterTest.h  TestMain.cpp  XmlToMetaDataConverterTest.cpp  XmlToMetaDataConverterTest.h
20_Sources/IpcAdapter/Components/NetworkComponents/: CMakeLists.txt
20_Sources/IpcAdapter/Components/NetworkComponents/doc/: NetworkComponents_MRS.md
20_Sources/IpcAdapter/Components/NetworkComponents/src/: UdpSink.cpp  UdpSink.h  UdpSource.cpp  UdpSource.h
20_Sources/IpcAdapter/Components/NetworkComponents/tst/: TestMain.cpp  UdpSinkTest.cpp  UdpSinkTest.h  UdpSourceTest.cpp  UdpSourceTest.h
20_Sources/IpcAdapter/Components/Sinks/: CMakeLists.txt
20_Sources/IpcAdapter/Components/Sinks/doc/: Sinks_MRS.md
20_Sources/IpcAdapter/Components/Sinks/src/: AmqpExchangeSink.cpp  AmqpExchangeSink.h  UdpSink.cpp  UdpSink.h
20_Sources/IpcAdapter/Components/Sinks/tst/: AmqpExchangeSinkTest.cpp  AmqpExchangeSinkTest.h  SinkTestMain.cpp  TestMain.cpp  UdpSinkTest.cpp  UdpSinkTest.h
20_Sources/IpcAdapter/Components/Sources/: CMakeLists.txt
20_Sources/IpcAdapter/Components/Sources/doc/: Sources_MRS.md
20_Sources/IpcAdapter/Components/Sources/src/: UdpSource.cpp  UdpSource.h
20_Sources/IpcAdapter/Components/Sources/tst/: TestMain.cpp  UdpSourceTest.cpp  UdpSourceTest.h
20_Sources/IpcAdapter/Core/: CMakeLists.txt
20_Sources/IpcAdapter/Core/api/: GlobalComponentRegistry.h  IComponent.h  IConfigurable.h  IConfigurator.h  IConverter.h  IFactoryRegistry.h  IPipeline.h  IPipelineFrame.h  IPipelineStep.h  IProvider.h  IRuntime.h  IRuntimeConfiguration.h  ISink.h  ISource.h  Logger.h  Runtime.h  SimplePipelineFrame.h
20_Sources/IpcAdapter/Core/cfg/: UdpSource_to_UdpSink_pipeline.xml  ipca-configuration-v1.xsd
20_Sources/IpcAdapter/Core/src/: ComponentRegistry.cpp  ComponentRegistry.h  ConfigurationHandler.cpp  ConfigurationHandler.h  GlobalComponentRegistry.cpp  Pipeline.cpp  Pipeline.h  Runtime.cpp  RuntimeConfiguration.cpp  RuntimeConfiguration.h  SimplePipelineFrame.cpp
20_Sources/IpcAdapter/Core/tst/: ComponentRegistryTest.cpp  ComponentRegistryTest.h  PipelineTest.cpp  PipelineTest.h  RuntimeTest.cpp  RuntimeTest.h  RuntimeTest.qrc  RuntimeTest_00_broken_file.xml  RuntimeTest_04_wrong_root_element.xml  RuntimeTest_05_root_element_with_wrong_version.xml  RuntimeTest_06_unknown_component.xml  RuntimeTest_07_duplicate_component_id.xml  RuntimeTest_08_two_components.xml  RuntimeTest_09_duplicate_pipeline_id.xml  RuntimeTest_10_pipeline_with_wrong_component_as_sink.xml  RuntimeTest_11_pipeline_with_wrong_component_as_converter.xml  RuntimeTest_12_unknown_param_list_ref.xml  RuntimeTest_99_all_features.xml  TestMain.cpp
20_Sources/IpcAdapter/Shared/api/: ConvenienceMacros.h
20_Sources/IpcAdapter/Shared/tst/: QTestConvenienceMacros.h  QTestLibInvocation.h
Documentation/: Design_Decisions.md  Naming_Conventions.md  System_Requirements.md
